<resources>
    <string name="app_name">Natour2122</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="PhoneNumber">PhoneNumber</string>
    <string name="BENVENUTO">Benvenuto</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="textview">CREATE ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="OR">Or</string>
    <string name="title_activity_home">activity_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="NATOUR">app_name1</string>
    <string name="profile">Profilo</string>
    <string name="notifiche">Notifiche</string>
    <string name="collection">Collection</string>
    <string name="others">Altro</string>
    <string name="settings">Impostazioni</string>
    <string name="support">Supporto</string>
    <string name="About_Us">AboutUs</string>
    <string name="andrea_migliorisi">Andrea Migliorisi</string>
    <string name="verificato">Verified</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="benvenuto_escursionista">benvenuto</string>
    <string name="benvenuto">BENVENUTO ESCURSIONISTA</string>
    <string name="messaggio_benvenuto">Nella nostra app puoi trovare la soluzione migliore per il tuo viaggio immerso nella natura</string>
    <string name="messaggio_benvenuto1">ENTRA NEL NOSTRO MONDO E CONDIVIDI LE TUE ESPERIENZE CON NOI</string>
    <string name="esplorazione">BUONA ESPLORAZIONE</string>
    <string name="Path">Aggiungi Sentiero</string>
</resources>